--- a/about.html
+++ b/about.html
@@ -1,10 +1,134 @@
 ﻿<!DOCTYPE html>
-<html>
+<html lang="en-us">
 <head>
-    <title></title>
-	<meta charset="utf-8" />
+    <title>About</title>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+    <!-- CSS Files -->
+    <!-- Fonts library -->
+    <link href="stylesheets/fonts.css" rel="stylesheet" />
+    <!-- Bootstrap core CSS-------->
+    <link href="stylesheets/bootstrap.min.css" rel="stylesheet" />
+    <!-- Header Footer css -->
+    <link href="stylesheets/header_footer.css" rel="stylesheet" />
+    <!-- Master Slider core CSS -->
+    <link href="stylesheets/masterslider.css" rel="stylesheet" />
+    <!-- User CSS -->
+    <link href="stylesheets/about.css" rel="stylesheet" />
+
+
 </head>
 <body>
+    <nav class="navbar navmy-cutom navbar-default navbar-fixed-top">
+        <div class="container">
+            <div class="navbar-header">
+                <!-- For mobile nav -->
 
+                <button type="button" class="navbar-toggle collapsed">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <!-- Logo -->
+                <a class="navbar-brand" href="#">
+                    <img alt="Brand" src="images/MYH_finewines_Logo.png">
+                </a>
+                <div class="lang-cont Mobile">
+                    <a href="index.html" class="lang">ENGLISH</a>|
+                    <a href="#" class="lang">中国</a>
+                </div>
+            </div>
+
+
+            <div class="navbar-collapse" id="navbar-collapse-1">
+                <ul class="nav navbar-nav ">
+                    <li><a href="index.html">HOME</a></li>
+                    <li class="current"><a href="about.html">ABOUT</a></li>
+                    <li class="dropdown">
+                        <a lass="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">ZALTO GLASSWARE<span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li ><a href="thebrand.html">THE BRAND</a></li>
+                            <li><a href="theglassware.html">THE GLASSWARE</a></li>
+                            <li><a href="thepraise.html">THE PRAISE</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="contact.html">CONTACT US</a></li>
+                </ul>
+                <div class="lang-cont Desktop">
+                    <a href="index.html" class="lang">ENGLISH</a>|
+                    <a href="#" class="lang">中国</a>
+                </div>
+            </div>
+        </div>
+    </nav>
+    <section id="AboutMYH">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                    <h1>about myh</h1>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                    <div class="aboutTxt" style="margin-bottom:32px;">MYH Fine Wines is proud to be the exclusive Master Agent and distributor of Zalto Den'Art glassware for Hong Kong, Macau and Mainland China since 2012. We continue to develop an excellent partner network of wine and homeware companies to bring the Zalto brand to the gastronomy, wine industry and consumer segments in these regions.</div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="blackSect">
+        <div class="darktxt">We look to elevate the wine experience for as many people as possible with the beautiful and top rated Zalto Denk'Art glassware from Austria.</div>
+    </section>
+    <section id="prefooter">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
+                    <div class="prefootertxt">MYH Fine Wines has headquarter operations in Hong Kong, which also serves Macau, along with Beijing, serving all of Mainland China.</div>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+                    <div class="contarea">
+                            <div class="contareatxt">For all enquiries, please contact us.</div>
+                            <div class="contareabtn"><a href="#">contact us</a></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-5 col-md-5 col-sm-6 col-xs-6">
+                    <div class="foot-img">
+                        <img src="images/MYH_finewines_Logo_footer.png" alt="MYH" />
+                        <img src="images/zalto denkart_no background_footer.png" alt="Zalto" />
+                    </div>
+                    <div class="foot-txt botMargin">Exclusive Importer and Distributor for Zalto<br /> in Hong Kong, Macau and Mainland China</div>
+                    <div class="foot-txt">© <span style="font-family:'Roboto-Light';">2015</span> MYH Fine Wines. All rights reserved.</div>
+                </div>
+                <div class="col-lg-7 col-md-7 col-sm-6 col-xs-6">
+                    <div class="row">
+                        <div class="col-lg-7 col-md-7 col-sm-12 col-xs-12">
+                            <div class="foot-cont-txt margtp"><span style="font-family:'Raleway-Medium'">Hong Kong/Macau:</span><br />Ming Ying Hui (Hong Kong) Trading Ltd.<br /> 銘英會(香港)貿易有限公司</div>
+                            <div class="foot-cont-txt" style="margin-bottom:0;"><span style="font-family:'Raleway-Medium'">Mainland China:</span><br />Ming Ying Hui (Beijing) Trading Ltd.<br /> 銘英會(香港)貿易有限公司</div>
+                        </div>
+                        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+                            <div class="foot-info-txt botMargin2 margtp">+<span style="font-family:'Roboto-Light';">86 158 1005 3940</span> (Mandarin/English)<br /><span style="font-family:'Roboto-Light';">+852 8120 7488</span> (English)</div>
+                            <div class="foot-info-txt">sales@myhfinewines.com<br />www.myhfinewines.com</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+    <!-- Bootstrap core JS-------->
+    <script src="javascripts/jquery-1.11.3.min.js"></script>
+    <script src="javascripts/jquery-migrate-1.2.1.min.js"></script>
+    <script src="javascripts/bootstrap.min.js"></script>
+    <!-- Master slider core JS -->
+    <script src="javascripts/masterslider.min.js"></script>
+    <!-- Java Script area -->
+    <script src="javascripts/custom.js"></script>
 </body>
 </html>
