--- a/thebrand.html
+++ b/thebrand.html
@@ -12,8 +12,9 @@
     <link href="stylesheets/bootstrap.min.css" rel="stylesheet" />
     <!-- Header Footer css -->
     <link href="stylesheets/header_footer.css" rel="stylesheet" />
-    <!-- Master Slider core CSS -->
-    <link href="stylesheets/masterslider.css" rel="stylesheet" />
+    <!-- User CSS -->
+    <link href="stylesheets/brand.css" rel="stylesheet" />
+
 
 </head>
 <body>
@@ -41,12 +42,12 @@
 
             <div class="navbar-collapse" id="navbar-collapse-1">
                 <ul class="nav navbar-nav ">
-                    <li><a href="#">HOME</a></li>
-                    <li><a href="#">ABOUT</a></li>
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">ZALTO GLASSWARE<span class="caret"></span></a>
+                    <li><a href="index.html">HOME</a></li>
+                    <li><a href="about.html">ABOUT</a></li>
+                    <li class="dropdown current">
+                        <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">ZALTO GLASSWARE<span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li class="current"><a href="#">THE BRAND</a></li>
+                            <li><a href="thebrand.html">THE BRAND</a></li>
                             <li><a href="#">THE GLASSWARE</a></li>
                             <li><a href="#">THE PRAISE</a></li>
                         </ul>
@@ -60,11 +61,211 @@
             </div>
         </div>
     </nav>
+    <section id="brandSec">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                    <div class="infoblock">
+                        <div class="verticalAligne">
+                            <h2>HISTORY</h2>
+                            <div class="maintxt">In the northern part of Lower-Austria the tradition of glass blowing goes back to the early 14th century. The Zalto family, a glassmaking dynasty whose roots reach back to Venice, settled down in this region six generations ago. Since then Zalto has been producing high quality mouth-blown glass in Neunagelberg and has made a name for itself among bon vivants beyond all borders.</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                    <div class="imgContainer"><img src="images/brand/Denk und Glas.jpg" /></div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 aligne-right">
+                    <div class="infoblock">
+                        <div class="verticalAligne">
+                            <h2>DENK’ART DESIGN</h2>
+                            <div class="maintxt">The Zalto Denk'Art Glasses were named for Father Hans Denk, the Austrian wine priest who has spent decades in the study and tasting of wines, and is one of the most valued wine experts in Austria. Father Denk guided the glassmakers in the design of each bowl to elicite the best qualities for the type or style of wine it is meant for.</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                    <div class="imgContainer"><img src="images/brand/Sketching image.jpg" /></div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                    <div class="infoblock">
+                        <div class="verticalAligne">
+                            <h2>THE ANGLES</h2>
+                            <div class="maintxt">The curve of the bowls are tilted at the angles of 24°, 48° and 72°, which are in accordance to the tilt angles of the Earth. The ancient Romans utilized this triumvirate of angles with their supply repositories, finding that produce stayed fresh for a longer time, and that it also showed improved taste. Due to these cosmic parallels, Zalto believes that a wine can reach its utmost potential in a Denk`Art glass.</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                    <div class="imgContainer"><img src="images/brand/Hans Denk präsentiert.jpg" /></div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 aligne-right">
+                    <div class="infoblock">
+                        <div class="verticalAligne">
+                            <h2>Unique attributes</h2>
+                            <div class="maintxt">From the first touch, each Zalto glass distinguishes itself from all other glasses.  From the perfectly executed balance to the extraordinary design, the achievement of the Denk`Art line are glasses that seem nearly too delicate to hold, and yet they are made for just that.  This is glassware that stands at the rarefied point where form meets function.  This is art. </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                    <div class="imgContainer"><img src="images/brand/3G5W1259_A.jpg" /></div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                    <div class="infoblock">
+                        <div class="verticalAligne">
+                            <h2>MOdern elegance</h2>
+                            <div class="maintxt">Despite its feather-light weight and delicate edges, the Denk'Art series of glasses maintains all the best attributes of a modern day glass as far as care and longevity are concerned. They are lead-free and resistant against clouding. Denk`Art glasses may be washed in the dishwasher and should be considered your everyday glass as well as the glass to use for your most special occasions. </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                    <div class="imgContainer"><img src="images/brand/7G5W1014_A.jpg" /></div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 aligne-right">
+                    <div class="infoblock">
+                        <div class="verticalAligne">
+                            <h2>Etching</h2>
+                            <div class="maintxt">Zalto can customize your wine glasses with special engravings, such as your corporate logo, initials and special commemorative event information, each one done by hand. The etching may be done on the bowl or foot of the glass - great for corporate gifting, VIP events, weddings and clubs. </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                    <div class="imgContainer"><img src="images/brand/Etching image.jpg" /></div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                    <div class="infoblock">
+                        <div class="verticalAligne">
+                            <h2>PROFESSIONAL RECOGNITION</h2>
+                            <div class="maintxt">In December 2009 Stern magazine of Germany conducted the most comprehensive and independent testing thus far of the world's finest wine stemware. The testing was in ‘blind' conditions. The judges tasted the same three wines out of 10 different glasses.  The Professional Jury voted Zalto as the finest glass for all three wines tasted, receiving three 1st Place awards. </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                    <div class="imgContainer"><img src="images/brand/IMG_9520.jpg" /></div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="juryRes">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                    <h2 style="margin-top:39px;">PROFESSIONAL JURY RESULTS</h2>
+                </div>
+            </div>
+            <div class="row Desktop-block">
+                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+                    <h2 class="jurName">Riesling</h2>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+                    <h2 class="jurName">Burgundy</h2>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+                    <h2 class="jurName">Bordeaux</h2>
+                </div>
+            </div>
+        </div>
+        <div class="container-flex black Desktop-block">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+                        <div class="jurplace">
+                            1<sup>st</sup> place
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+                        <div class="jurplace">
+                            1<sup>st</sup> place
+                        </div>
+                    </div><div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+                        <div class="jurplace">
+                            1<sup>st</sup> place
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-6"><div class="jurimg"><img src="images/brand/White wine copy.jpg" /></div></div>
+                <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6 Mobile jurhei">
+                    <div class="verticalAligne">
+                        <div class="jurdescr">
+                            <div class="black placehold">
+                                <div class="jurplace">
+                                    1<sup>st</sup> place
+                                </div>
+                            </div>
+                            <h2 class="jurName">Riesling</h2>
+                            <div class="jurdescr-img"></div>
+                            <div class="jurdescr-txt">Denk`Art White Wine,<br /> hand blown, lead-free.</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-6"><div class="jurimg"><img src="images/brand/Burgundy copy 2.jpg" /></div></div>
+                <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6 Mobile jurhei" >
+                    <div class="verticalAligne">
+                        <div class="jurdescr">
+                            <div class="black placehold">
+                                <div class="jurplace">
+                                    1<sup>st</sup> place
+                                </div>
+                            </div>
+                            <h2 class="jurName">Burgundy</h2>
+                            <div class="jurdescr-img"></div>
+                            <div class="jurdescr-txt">Denk`Art White Wine,<br /> hand blown, lead-free.</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-6"><div class="jurimg"><img src="images/brand/Bordeaux copy 2.jpg" /></div></div>
+                <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6 Mobile jurhei">
+                    <div class="verticalAligne">
+                        <div class="jurdescr">
+                            <div class="black placehold">
+                                <div class="jurplace">
+                                    1<sup>st</sup> place
+                                </div>
+                            </div>
+                            <h2 class="jurName">Bordeaux</h2>
+                            <div class="jurdescr-img"></div>
+                            <div class="jurdescr-txt">Denk`Art White Wine,<br /> hand blown, lead-free.</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row Desktop-block">
+                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+                    <div class="jurdescr">
+                        <div class="jurdescr-img"></div>
+                        <div class="jurdescr-txt">Denk`Art White Wine,<br /> hand blown, lead-free.</div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+                    <div class="jurdescr">
+                        <div class="jurdescr-img"></div>
+                        <div class="jurdescr-txt">Denk`Art White Wine,<br /> hand blown, lead-free.</div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+                    <div class="jurdescr">
+                        <div class="jurdescr-img"></div>
+                        <div class="jurdescr-txt">Denk`Art White Wine,<br /> hand blown, lead-free.</div>
+                    </div>
+                </div>
+            </div>
 
-
-
-
-
+        </div>
+    </section>
     <footer>
         <div class="container">
             <div class="row">
@@ -96,8 +297,6 @@
     <script src="javascripts/jquery-1.11.3.min.js"></script>
     <script src="javascripts/jquery-migrate-1.2.1.min.js"></script>
     <script src="javascripts/bootstrap.min.js"></script>
-    <!-- Master slider core JS -->
-    <script src="javascripts/masterslider.min.js"></script>
     <!-- Java Script area -->
     <script src="javascripts/custom.js"></script>
 </body>
