--- a/index.html
+++ b/index.html
@@ -34,28 +34,26 @@
                     <img alt="Brand" src="images/MYH_finewines_Logo.png">
                 </a>
                 <div class="lang-cont Mobile">
-                    <a href="#" class="lang">ENGLISH</a>|
+                    <a href="index.html" class="lang">ENGLISH</a>|
                     <a href="#" class="lang">中国</a>
                 </div>
             </div>
-
-
             <div class="navbar-collapse" id="navbar-collapse-1">
                 <ul class="nav navbar-nav ">
-                    <li class="current"><a href="#">HOME</a></li>
-                    <li><a href="#">ABOUT</a></li>
+                    <li class="current"><a href="index.html">HOME</a></li>
+                    <li><a href="about.html">ABOUT</a></li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">ZALTO GLASSWARE<span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="#">THE BRAND</a></li>
-                            <li><a href="#">THE GLASSWARE</a></li>
-                            <li><a href="#">THE PRAISE</a></li>
+                            <li><a href="thebrand.html">THE BRAND</a></li>
+                            <li><a href="theglassware.html">THE GLASSWARE</a></li>
+                            <li><a href="thepraise.html">THE PRAISE</a></li>
                         </ul>
                     </li>
-                    <li><a href="#">CONTACT US</a></li>
+                    <li><a href="contact.html">CONTACT US</a></li>
                 </ul>
                 <div class="lang-cont Desktop">
-                    <a href="#" class="lang">ENGLISH</a>|
+                    <a href="index.html" class="lang">ENGLISH</a>|
                     <a href="#" class="lang">中国</a>
                 </div>
             </div>
