--- a/thebrand.html
+++ b/thebrand.html
@@ -34,7 +34,7 @@
                     <img alt="Brand" src="images/MYH_finewines_Logo.png">
                 </a>
                 <div class="lang-cont Mobile">
-                    <a href="#" class="lang">ENGLISH</a>|
+                    <a href="index.html" class="lang">ENGLISH</a>|
                     <a href="#" class="lang">中国</a>
                 </div>
             </div>
@@ -48,14 +48,14 @@
                         <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">ZALTO GLASSWARE<span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="thebrand.html">THE BRAND</a></li>
-                            <li><a href="#">THE GLASSWARE</a></li>
-                            <li><a href="#">THE PRAISE</a></li>
+                            <li><a href="theglassware.html">THE GLASSWARE</a></li>
+                            <li><a href="thepraise.html">THE PRAISE</a></li>
                         </ul>
                     </li>
-                    <li><a href="#">CONTACT US</a></li>
+                    <li><a href="contact.html">CONTACT US</a></li>
                 </ul>
                 <div class="lang-cont Desktop">
-                    <a href="#" class="lang">ENGLISH</a>|
+                    <a href="index.html" class="lang">ENGLISH</a>|
                     <a href="#" class="lang">中国</a>
                 </div>
             </div>
