--- a/thepraise.html
+++ b/thepraise.html
@@ -37,9 +37,9 @@
             </div>
             <div class="navbar-collapse" id="navbar-collapse-1">
                 <ul class="nav navbar-nav ">
-                    <li class="current"><a href="index.html">HOME</a></li>
+                    <li><a href="index.html">HOME</a></li>
                     <li><a href="about.html">ABOUT</a></li>
-                    <li class="dropdown">
+                    <li class="dropdown current">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">ZALTO GLASSWARE<span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="thebrand.html">THE BRAND</a></li>
