--- a/thebrand.html
+++ b/thebrand.html
@@ -35,7 +35,7 @@
                 </a>
                 <div class="lang-cont Mobile">
                     <a href="index.html" class="lang">ENGLISH</a>|
-                    <a href="#" class="lang">中国</a>
+                    <a href="#" class="lang">中文 </a>
                 </div>
             </div>
 
@@ -56,7 +56,7 @@
                 </ul>
                 <div class="lang-cont Desktop">
                     <a href="index.html" class="lang">ENGLISH</a>|
-                    <a href="#" class="lang">中国</a>
+                    <a href="#" class="lang">中文 </a>
                 </div>
             </div>
         </div>
