--- a/theglassware.html
+++ b/theglassware.html
@@ -34,7 +34,7 @@
                 </a>
                 <div class="lang-cont Mobile">
                     <a href="index.html" class="lang">ENGLISH</a>|
-                    <a href="#" class="lang">中国</a>
+                    <a href="#" class="lang">中文 </a>
                 </div>
             </div>
             <div class="navbar-collapse" id="navbar-collapse-1">
@@ -53,7 +53,7 @@
                 </ul>
                 <div class="lang-cont Desktop">
                     <a href="index.html" class="lang">ENGLISH</a>|
-                    <a href="#" class="lang">中国</a>
+                    <a href="#" class="lang">中文 </a>
                 </div>
             </div>
         </div><!-- /.container-fluid -->
