--- a/thepraise.html
+++ b/thepraise.html
@@ -32,7 +32,7 @@
                 </a>
                 <div class="lang-cont Mobile">
                     <a href="index.html" class="lang">ENGLISH</a>|
-                    <a href="#" class="lang">中国</a>
+                    <a href="#" class="lang">中文 </a>
                 </div>
             </div>
             <div class="navbar-collapse" id="navbar-collapse-1">
@@ -51,7 +51,7 @@
                 </ul>
                 <div class="lang-cont Desktop">
                     <a href="index.html" class="lang">ENGLISH</a>|
-                    <a href="#" class="lang">中国</a>
+                    <a href="#" class="lang">中文 </a>
                 </div>
             </div>
         </div><!-- /.container-fluid -->
